--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,6 +30,10 @@
             --secondary-font: font-family: 'Mulish', sans-serif;
         }
 
+        * input {
+            font-size: 16px;
+        }
+
         body {
             background: #000;
             color: #ddd;
