--- a/views/register.ejs
+++ b/views/register.ejs
@@ -46,6 +46,10 @@
             background-size: contain;
         }
 
+        * input {
+            font-size: 16px;
+        }
+
         .container {
             height: 100vh;
             display: grid;
