--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -307,6 +307,12 @@
         .active {
             color: #F2C033 !important;
         }
+
+        .userName {
+            pointer-events: none;
+            color: #88266F !important;
+            border-radius: 20%;
+        }
     </style>
 
 
@@ -346,6 +352,10 @@
 
                 </div>
                 <div class="navlink">
+                    <a href="#" class="userName">
+
+                        Hi ! <%= user.name %>
+                    </a>
                     <a href="/dashboard" class="active">dasboard</a>
                     <a href="/digitalauditionplatform">digitalauditionplatform</a>
                     <a href="/profile">profile</a>
