--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -46,7 +46,7 @@
 
         </div>
         <div class="center">
-            <img src="/assest/GODFACTOR/Screen Shot 2022-02-06 at 10.52.png" alt="">
+            <img class="cimg" src="/assest/GODFACTOR/Screen Shot 2022-02-06 at 10.52.png" alt="">
         </div>
         <div class="call">
             <h1>Calls for Entry & Application.</h1>
