--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -633,9 +633,8 @@
 
         .userName {
             pointer-events: none;
-            color: #88266F;
+            color: #88266F !important;
             border-radius: 20%;
-            /* background-color: #F2C033; */
         }
     </style>
 </head>
