--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -321,6 +321,11 @@
                 <img src="/assest/OLIVE/Line 2.png" alt="">
             </div> -->
                 <button class="btn" id="submitBtn" type="submit">REGISTER</button>
+
+                <div class="login" style="text-align: center !important;">
+                    <a href=" /login"><span>Already a Member</span> in</a>
+
+                </div>
             </form>
 
 
@@ -401,6 +406,8 @@
                     <br>
 
                     <button type="submit" class="btn">SUBMIT</button>
+
+
 
 
 
