--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -723,7 +723,7 @@
         const imageOne = document.querySelector('.imageOne');
         const formobile = document.querySelector('.content');
         // check media query for mobile
-        const ImagesArr = ["/assest/OLIVE/duotone9.png", "/assest/OLIVE/duotone4.png"]
+        const ImagesArr = ["/assest/OLIVE/duotone9.png", "/assest/OLIVE/duotone4.png", "/assest/OLIVE/duotone5.png"]
         if (window.matchMedia("(max-width: 40em)").matches) {
 
             setInterval(() => {
