--- a/views/provider/auditions.ejs
+++ b/views/provider/auditions.ejs
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Jquery DataTable | Bootstrap Based Admin Template - Material Design</title>
+    <title>G-FACTOR</title>
     <!-- Favicon-->
-    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="../../favicon.ico" type="image/x-icon"> -->
+    <link rel="icon" href="/images/logo copy.png" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
@@ -101,7 +102,7 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse"
                     data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="/provider/dashboard">Olive Logo</a>
+                <a class="navbar-brand" href="/provider/dashboard">G-FACTOR Logo</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -392,7 +393,7 @@
             <!-- Footer -->
             <div class="legal">
                 <div class="copyright">
-                    &copy; 2021 <a href="javascript:void(0);">Olive </a>.
+                    &copy; 2021 <a href="javascript:void(0);">G-FACTOR </a>.
                 </div>
 
             </div>
