--- a/views/provider/login.ejs
+++ b/views/provider/login.ejs
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>GhenGhen Live Provider</title>
+    <title>G-FACTOR Provider</title>
     <!-- Favicon-->
-    <link rel="icon" href="../../favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="../../favicon.ico" type="image/x-icon"> -->
+    <link rel="icon" href="/images/logo copy.png" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
@@ -29,8 +30,8 @@
 <body class="login-page">
     <div class="login-box">
         <div class="logo">
-            <a href="/provider">GhenGhen Live<b>Provider</b></a>
-            <small>GhenGhen Live Provider Login</small>
+            <a href="/provider">G-FACTOR <b>Provider</b></a>
+            <small>G-FACTOR Provider Login</small>
         </div>
         <div class="card">
             <div class="body">
