--- a/views/provider/partials/header.ejs
+++ b/views/provider/partials/header.ejs
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>GhenGhen Live Provider</title>
+    <title>GhenGhen Provider</title>
     <!-- Favicon-->
-    <link rel="icon" href="../../../favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/logo copy.png" type="image/x-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,cyrillic-ext" rel="stylesheet"
@@ -75,7 +75,7 @@
 
                     <img src="/assest/OLIVE/logo.png" alt="">
 
-                    GhenGhen Live Provider
+                    GhenGhen Provider
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -359,7 +359,7 @@
             <!-- Footer -->
             <div class="legal">
                 <div class="copyright">
-                    &copy; 2021 <a href="javascript:void(0);">GhenGhen Live</a>.
+                    &copy; 2021 <a href="javascript:void(0);">GhenGhen </a>.
                 </div>
                 <div class="version">
                     <b>Provider</b>
