--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -438,7 +438,7 @@
 
                         Hi ! <%= user.name %>
                     </a>
-                    <a href="/dashboard">dasboard</a>
+                    <a href="/dashboard">home</a>
                     <a href="/digitalauditionplatform" class="active">digitalauditionplatform</a>
                     <a href="/profile">profile</a>
                     <a href="/logout">logout</a>
