--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -356,7 +356,7 @@
 
                         Hi ! <%= user.name %>
                     </a>
-                    <a href="/dashboard" class="active">dasboard</a>
+                    <a href="/dashboard" class="active">home</a>
                     <a href="/digitalauditionplatform">digitalauditionplatform</a>
                     <a href="/profile">profile</a>
                     <a href="/logout">logout</a>
