--- a/views/success.ejs
+++ b/views/success.ejs
@@ -442,7 +442,7 @@
 
                         Hi ! <%= user.name %>
                     </a>
-                    <a href="/dashboard">dasboard</a>
+                    <a href="/dashboard">home</a>
                     <a href="/digitalauditionplatform">digitalauditionplatform</a>
                     <a href="/profile">profile</a>
                     <a href="/logout">logout</a>
