--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -27,7 +27,7 @@
         // },
     });
 </script>
-<script defer>
+<script>
     const home = document.querySelector('.home');
     if (home) {
         const navlink = document.querySelector('.navlink');
