--- a/views/provider/oneaudition.ejs
+++ b/views/provider/oneaudition.ejs
@@ -113,8 +113,8 @@
                                 </div>
                                 <% } %>
 
-
                         </div>
+                        <div class="btn">Stages</div>
                     </div>
                 </div>
     </section>
