--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -808,7 +808,7 @@
                                                     <p class="dbDate">
                                                     </p>
                                                     <a class="readyforaudition" target="_blank"
-                                                        href="https://studio.restream.io/guest/bDBaNllXa7srZaCHW01LjKxavz4ynEU">Go
+                                                        href="https://streamyard.com/bdcf3gipmu">Go
                                                         to
                                                         Audition</a>
                                                     <%}%>
