--- a/public/styles/landing.css
+++ b/public/styles/landing.css
@@ -296,6 +296,8 @@ footer{
 }
 .footerlinks > div > p{
     font-family: 'Mulish', sans-serif;
+    font-weight: bolder;
+    font-size: 1em;
 }
 .footerlinks > div > a{
   color: #fff;
@@ -755,40 +757,13 @@ footer{
         .cimg{
            width: 100%;
         }
-        /* .benefits{
-            grid-column: 1/4;
+        .footerlinks > div > p {
+            font-family: 'Mulish', sans-serif;
+            font-weight: bolder;
+            font-size:13px ;
         }
-        .benefits .benefits-grid div:last-child{
-            border-right: none;
-        }
-        .benefits .benefits-grid div:nth-of-type(3){
-            border-right: 1px solid #fff;
-        }
-        .benefits .benefits-grid div:nth-of-type(2){
-            border-right: none;
-        }
-        .benefits .benefits-grid div:nth-of-type(6){
-            border-bottom: none;
-        }
-        .benefits .benefits-grid div:nth-of-type(4){
-            border-bottom: 1px solid #fff;
-            border-right: none;
-        }
-        .benefits .benefits-grid div:nth-of-type(5){
-            border-bottom: none;
-        } */
-        /* .powered{
-       
-        }
-        .landing{
-            grid-column: 1/4;
-        }
-        .call{
-            grid-column: 1/4;
-        }
-        .purpose{
-            grid-column: 1/4;
-        } */
+        
+        
 
     }
  /* }; */
