--- a/views/success.ejs
+++ b/views/success.ejs
@@ -332,6 +332,7 @@
         @media screen and (max-width:400px) {
             .CONGRATULATION {
                 grid-template-columns: 1fr;
+                height: 100%;
             }
 
             #submitBtn {
@@ -471,7 +472,7 @@
 
                 <div class="footer_social">
                     <div>
-                        <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
+                        <p><span style="color: #ddd;">&copy; 2021</span> G-FACTOR </p>
                     </div>
                     <div class="social_icon">
                         <img src="/assest/OLIVE/fb.png" />
