--- a/views/userAuditions.ejs
+++ b/views/userAuditions.ejs
@@ -778,8 +778,8 @@
                                                         <div class="selectdd">
 
                                                             <input name="date" id="dateandtime" type="date"
-                                                                min="<%=auditions.auditionStartDate%> "
-                                                                max="<%=auditions.auditionEndDate%> ">
+                                                                min="<%=auditions.auditionStartDate%>"
+                                                                max="<%=auditions.auditionEndDate%>">
                                                             <p>
                                                                 <select name="time" id="time">
                                                                     <option value="">Time</option>
@@ -1053,10 +1053,10 @@
                         fetch("/dateselection", {
                             method: "POST",
                             headers: {
-                                "Content-Type": "application/json"
+                                "Content-Type": "application/json",
                             },
                             body: JSON.stringify(payload)
-                        }).then(res => res.json())
+                        }).then((res) => res.json())
                             .then(data => {
                                 console.log(data);
                                 if (data.status === "success") {
